# django-plaintext-password

./: README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml
plaintext_password/: __init__.py  checks.py
scripts/: test.sh
tests/: settings.py  tests.py
